[workspace]
resolver = "2"

# members = ["crates/*", "crates/manas_specs/codegen/", "fcrates/*"]
members = [
    "fcrates/gdp_rs",
    "fcrates/dyn_problem",
    "fcrates/typed_record",
    "fcrates/name_locker",
    "fcrates/capped_stream",
    "fcrates/http_uri",
    "fcrates/dpop",
    "fcrates/rdf_dynsyn",
    "fcrates/rdf_utils",
    "fcrates/webid",
    "fcrates/solid_oidc_types",
    "fcrates/acp",
    "crates/manas_http",
    "crates/manas_specs",
    "crates/manas_specs/codegen",
    "crates/manas_space",
    "crates/manas_semslot",
    "crates/manas_repo",
    "crates/manas_repo_layers",
    "crates/manas_authentication",
    "crates/manas_access_control",
    "crates/manas_repo_opendal",
    "crates/manas_storage",
    "crates/manas_podverse",
    "crates/manas_server",
    "crates/manas_server/recipies/single_fs_wac",
    "crates/manas_server/recipies/single_s3_wac",
    # "crates/manas_tauri"
]

[profile.release]
strip = true
lto = true
