[package]
name = "manas"
version = "0.1.0"
edition = "2021"
description = "A modular framework for implementing solid compatible servers in rust"
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"

[dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
