[package]
name = "manas_access_control"
version = "0.1.0"
rust = "1.79.0"
edition = "2021"
description = "This crate Defines traits for access control systems compatible with solid storage space. Provides default implementations confirming to [`ACP`](https://solid.github.io/authorization-panel/acp-specification/), [`WAC`](https://solid.github.io/web-access-control-spec/) authorization systems."
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"


[dependencies]
acp = { version = "0.1.0", path = "../../fcrates/acp" }
dyn_problem = { version = "0.1.1", path = "../../fcrates/dyn_problem", features = [
    "alias-future",
    "ext-typed-record"
] }
futures = "0.3.30"
ghost = "0.1.17"
http_uri = { version = "1.0.1", path = "../../fcrates/http_uri", features = [
    "invariants",
    "sophia"
] }
manas_authentication = { version = "0.1.0", path = "../manas_authentication", features = ["creds-context"]}
http_typed_headers = { version = "0.1.0", path = "../../fcrates/http_typed_headers", default-features = false, features = ["wac-allow"] }
manas_space = { version = "0.1.0", path = "../manas_space" }
async-recursion = "1.1.1"
itertools = "0.13.0"
paste = "1.0.15"
rdf_utils = { version = "0.3.1", path = "../../fcrates/rdf_utils" }
rdf_vocabularies = { version = "0.2.0", features = ["ns-acp", "ns-acl", "ns-foaf","ns-rdf"] }
sophia_api = "0.8.0"
thiserror = "1.0.61"
tower = "0.4.13"
tracing = { version = "0.1.40", features = ["attributes"] }
unwrap-infallible = "0.1.5"
once_cell = "1.19.0"
vec1 = {version = "1.12.1", features = ["serde"]}

# feature: layered-repo-impl
manas_repo = { version = "0.1.0", path = "../manas_repo", optional = true }
typed_record = { version = "0.1.1", path = "../../fcrates/typed_record", features = ["ext-anymap", "ext-http"]}
serde = { version = "1.0.203", features = ["derive"] }


[features]
impl-pdp-acp = ["acp/engine"]
impl-pdp-wac = ["acp/engine"]
impl-layered-repo = ["dep:manas_repo"]
# cache-layered-prp = ["moka"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
