[package]
name = "manas_podverse"
version = "0.1.0"
edition = "2021"
description = "This crate provides traits and implementations for defining, serving, provisioning solid pods and podsets."
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"

[dependencies]
dyn_problem = { version = "0.1.1", path = "../../fcrates/dyn_problem", features = ["alias-future"] }
futures = "0.3.28"
ghost = "0.1.13"
http-api-problem = { version = "0.57.0", features = ["api-error", "hyper"] }
hyper = "0.14.27"
manas_http = { version = "0.1.1", path = "../manas_http", features = [
    "service",
] }
manas_repo = { version = "0.1.0", path = "../manas_repo" }
manas_space = { version = "0.1.0", path = "../manas_space" }
manas_storage = { version = "0.1.0", path = "../manas_storage" }
rdf_dynsyn = { version = "0.3.1", path = "../../fcrates/rdf_dynsyn", features = [
    "async",
] }
rdf_utils = { version = "0.3.1", path = "../../fcrates/rdf_utils" }
rdf_vocabularies = { version = "0.2.0", features = ["ns-rdf", "ns-pim"] }
regex = "1.9.1"
sophia_api = "0.8.0-alpha.3"
tower = "0.4.13"
tracing = { version = "0.1.37", features = ["attributes"] }

# feature: impl-podset-templated
dashmap = { version = "5.5.3", optional = true }
moka = { version = "0.12.0", features = ["future"], optional = true }


[features]
impl-podset-templated = ['dep:dashmap', "dep:moka"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
