[package]
name = "manas_repo"
version = "0.1.0"
edition = "2021"
description = "This crate defines definition traits for manas storage repositories and their services."
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"


[dependencies]
manas_http = { version = "0.1.1", path = "../manas_http", features = [
    "representation",
    "impl-representation",
    "conditional_req",
] }
manas_space = { version = "0.1.0", path = "../manas_space" }
dyn_problem = { version = "0.1.1", path = "../../fcrates/dyn_problem", features = ["alias-future"]}
futures = "0.3.30"
tower = {version = "0.4.13", features=["util"]}
dyn-clone = "1.0.17"
if_chain = "1.0.2"
smallvec = "1.13.2"
gdp_rs = { version = "0.1.1", path = "../../fcrates/gdp_rs" }
vec1 = "1.12.1"
iri-string = "0.7.2"
thiserror = "1.0.61"
once_cell = "1.19.0"
headers = "0.4.0"
http = "1.1.0"
mime = "0.3.17"
rdf_dynsyn = { version = "0.4.0", path = "../../fcrates/rdf_dynsyn", features = [
    "async",
] }
tracing = { version = "0.1.40", features = ["attributes"] }
bytes = "1.6.0"
async-compat = "0.2.4"
either = "1.13.0"
rdf_utils = { version = "0.3.1", path = "../../fcrates/rdf_utils"}
anyhow = "1.0.86"
regex = "1.10.5"
tokio = { version = "1.38.0", features = ["rt"] }
tokio-util = { version = "0.7.11", features = ["io", "io-util"] }
typed_record = { version = "0.1.1", path = "../../fcrates/typed_record", features = [
    "ext-anymap",
    "ext-http",
] }
unwrap-infallible = "0.1.5"
itertools = "0.13.0"
sophia_api = "0.8.0"
manas_authentication = { version = "0.1.0", path = "../manas_authentication" }

# feature: test-utils
claims = { version = "0.7.1", optional = true }
rstest = { version = "0.21.0", optional = true }
http-body = "1.0.0"

[features]
test-utils = ["dep:rstest", "dep:claims", "manas_space/test-utils"]

[dev-dependencies]
claims = "0.7.1"
rstest = "0.21.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
