[package]
name = "manas_repo_layers"
version = "0.1.0"
edition = "2021"
description = "This crate provides implementations for few common repo layers that integrate into manas eco system."
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manas_http = { version = "0.1.1", path = "../manas_http", features = [
    "representation",
    "impl-representation",
    "conditional_req",
] }
manas_space = { version = "0.1.0", path = "../manas_space" }
dyn_problem = { version = "0.1.1", path = "../../fcrates/dyn_problem", features = ["alias-future"]}
futures = "0.3.28"
hyper = "0.14.27"
tower = {version = "0.4.13", features=["util"]}
thiserror = "1.0.43"
once_cell = "1.18.0"
headers = "0.3.8"
http = "0.2.9"
mime = "0.3.17"
rdf_dynsyn = { version = "0.3.1", path = "../../fcrates/rdf_dynsyn", features = [
    "async",
] }
tracing = { version = "0.1.37", features = ["attributes"] }
async-convert = "1.0.0"
capped_stream = { version = "0.1.1", path = "../../fcrates/capped_stream" }
frunk_core = "0.4.2"
typed_record = { version = "0.1.1", path = "../../fcrates/typed_record", features = [
    "ext-anymap",
] }
rdf_utils = { version = "0.3.1", path = "../../fcrates/rdf_utils"}
manas_repo = { version = "0.1.0", path = "../manas_repo" }
if_chain = "1.0.2"
tokio = { version = "1.29.1", features = ["rt"] }
sophia_api = "0.8.0-alpha.3"
anyhow = "1.0.71"

rdf_vocabularies = { version = "0.2.0", features = [
    "ns-rdf",
    "ns-stat",
    "ns-dcterms",
    "ns-ldp",
    "ns-solid",
    "ns-xsd",
], optional = true}

[features]
dconneging = []
patching = ["rdf_utils/solid-insert-delete-patch"]
validating = ["dep:rdf_vocabularies"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
