[package]
name = "manas_repo_opendal"
version = "0.0.0"
edition = "2021"
description = "This crate provides default repository implementation on top of [OpenDAL](https://docs.rs/opendal/latest/opendal/) object store abstraction layer for manas ecosystem."
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"

[dependencies]
manas_repo = { version = "0.0.0", path = "../manas_repo" }
futures = "0.3.28"
manas_http = { version = "0.0.0", path = "../manas_http", features = [
    "representation",
] }
once_cell = "1.18.0"
rdf_dynsyn = { version = "0.3.0", path = "../../fcrates/rdf_dynsyn", features = [
    "async",
] }
tokio = { version = "1.29.1", features = ["rt", "macros", "io-util"] }
tower = { version = "0.4.13", features = ["util"] }
tracing = { version = "0.1.37", features = ["attributes"] }
uuid = { version = "1.2.2", features = ["v4"] }
dyn_problem = { version = "0.1.0", path = "../../fcrates/dyn_problem", features = [
    "ext-typed-record",
] }
rdf_utils = { version = "0.2.1", path = "../../fcrates/rdf_utils", features = [
    "compat-chrono",
    "solid-insert-delete-patch",
] }
rand = "0.8.5"
rand_seeder = "0.2.3"
if_chain = "1.0.2"
bimap = "0.6.3"
thiserror = "1.0.43"
flagset = "0.4.3"
# Opendal is pinned, as it breaks frequently.
opendal = { version = "^0.39.0", features = ["rustls"]}
gdp_rs = { version = "0.0.3", path = "../../fcrates/gdp_rs" }
regex = "1.9.1"
percent-encoding = "2.3.0"
async-stream = "0.3.5"
smallvec = "1.10.0"
serde = { version = "1.0.169", features = ["derive"] }
serde_with = { version = "3.0.0", features = ["time_0_3"] }
headers = "0.3.8"
serde_json = "1.0.100"
anyhow = "1.0.71"
either = "1.8.1"
bytes = "1.4.0"
async-trait = "0.1.71"
rdf_vocabularies = { version = "0.2.0", features = [
    "ns-solid",
    "ns-ldp",
    "ns-pim",
    "ns-cert",
    "ns-spec",
    "ns-rdf",
    "ns-rdfs",
    "ns-xsd",
    "ns-stat",
    "ns-acl",
    "ns-acp",
    "ns-dcterms",
] }
sophia_api = "0.8.0-alpha.1"
dashmap = "5.4.0"
typed_record = { version = "0.0.0", path = "../../fcrates/typed_record", features = [
    "ext-anymap",
] }
async-once-cell = "0.5.3"
http-body = "0.4.5"
hyper = { version = "0.14.27", features = ["stream"] }
manas_space = { version = "0.0.0", path = "../manas_space"}
vec1 = "1.10.1"
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
mime = "0.3.17"
itertools = "0.11.0"
sophia_turtle = "0.8.0-alpha.1"
manas_semslot = { version = "0.1.0", path = "../manas_semslot"}

# feature; service-embedded
rust-embed = { version = "8.0.0", optional = true }

# feature: test-utils
claims = { version = "0.7.1", optional = true }
rstest = { version = "0.18.1", optional = true }
build-fs-tree = { version = "0.6.0", optional = false }
async-recursion = { version = "1.0.4", optional = false }
hex = "0.4.3"
webid = { version = "0.1.0", path = "../../fcrates/webid", features = ["sophia"] }

# feature access-prp
manas_access_control = { version = "0.0.0", path = "../manas_access_control", optional = true }
unwrap-infallible = "0.1.5"
acp = { version = "0.1.0", path = "../../fcrates/acp", optional = true }
async-convert = "1.0.0"
manas_authentication = { version = "0.0.0", path = "../manas_authentication" }
ecow = "0.1.2"
capped_stream = { version = "0.1.0", path = "../../fcrates/capped_stream" }


[features]
backend-embedded = ["dep:rust-embed"]
backend-fs = ["opendal/services-fs"]
backend-s3 = ["opendal/services-s3"]
backend-gcs = ["opendal/services-gcs"]
test-utils = ["dep:rstest", "dep:claims", "manas_repo/test-utils", "manas_http/test-utils", "manas_space/test-utils", 'opendal/services-memory']
access-prp = ["dep:manas_access_control", "dep:acp"]

[dev-dependencies]
claims = "0.7.1"
rstest = "0.18.1"
tracing-test = "0.2.4"
manas_semslot = { version = "0.1.0", path = "../manas_semslot", features = ["test-utils"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
