[package]
name = "manas_repo_opendal"
version = "0.1.0"
rust = "1.79.0"
edition = "2021"
description = "This crate provides default repository implementation on top of [OpenDAL](https://docs.rs/opendal/latest/opendal/) object store abstraction layer for manas ecosystem."
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"

[dependencies]
manas_repo = { version = "0.1.0", path = "../manas_repo" }
futures = "0.3.30"
manas_http = { version = "0.1.1", path = "../manas_http", features = [
    "representation",
] }
once_cell = "1.19.0"
rdf_dynsyn = { version = "0.4.0", path = "../../fcrates/rdf_dynsyn", features = [
    "async",
] }
tokio = { version = "1.38.0", features = ["rt", "macros", "io-util"] }
tower = { version = "0.4.13", features = ["util"] }
tracing = { version = "0.1.40", features = ["attributes"] }
uuid = { version = "1.9.1", features = ["v4"] }
dyn_problem = { version = "0.1.1", path = "../../fcrates/dyn_problem", features = [
    "ext-typed-record",
] }
rdf_utils = { version = "0.3.1", path = "../../fcrates/rdf_utils", features = [
    "compat-chrono",
    "solid-insert-delete-patch",
] }
rand = "0.8.5"
rand_seeder = "0.2.3"
if_chain = "1.0.2"
bimap = "0.6.3"
thiserror = "1.0.61"
flagset = "0.4.5"
# Opendal is pinned, as it breaks frequently.
opendal = { version = "^0.44.2", features = ["rustls"]}
gdp_rs = { version = "0.1.1", path = "../../fcrates/gdp_rs" }
regex = "1.10.5"
percent-encoding = "2.3.1"
async-stream = "0.3.5"
smallvec = "1.13.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_with = { version = "3.8.3", features = ["time_0_3"] }
headers = "0.4.0"
serde_json = "1.0.120"
anyhow = "1.0.86"
either = "1.13.0"
bytes = "1.6.0"
async-trait = "0.1.80"
rdf_vocabularies = { version = "0.2.0", features = [
    "ns-solid",
    "ns-ldp",
    "ns-pim",
    "ns-cert",
    "ns-spec",
    "ns-rdf",
    "ns-rdfs",
    "ns-xsd",
    "ns-stat",
    "ns-acl",
    "ns-acp",
    "ns-dcterms",
] }
sophia_api = "0.8.0"
dashmap = "6.0.1"
typed_record = { version = "0.1.1", path = "../../fcrates/typed_record", features = [
    "ext-anymap",
] }
async-once-cell = "0.5.3"
http-body = "1.0.0"
manas_space = { version = "0.1.0", path = "../manas_space"}
vec1 = "1.12.1"
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
mime = "0.3.17"
itertools = "0.13.0"
sophia_turtle = "0.8.0"
manas_semslot = { version = "0.1.0", path = "../manas_semslot"}
mime_guess = { version = "2.0.5"}

# feature; service-embedded
rust-embed = { version = "8.4.0", optional = true }

# feature: test-utils
claims = { version = "0.7.1", optional = true }
rstest = { version = "0.21.0", optional = true }
build-fs-tree = { version = "0.6.0", optional = false }
async-recursion = { version = "1.1.1", optional = false }
hex = "0.4.3"
webid = { version = "0.1.0", path = "../../fcrates/webid", features = ["sophia"] }

# feature access-prp
manas_access_control = { version = "0.1.0", path = "../manas_access_control", optional = true }
unwrap-infallible = "0.1.5"
acp = { version = "0.1.0", path = "../../fcrates/acp", optional = true }
async-convert = "1.0.0"
manas_authentication = { version = "0.1.0", path = "../manas_authentication" }
ecow = "0.2.2"
capped_stream = { version = "0.1.1", path = "../../fcrates/capped_stream" }


[features]
backend-embedded = ["dep:rust-embed"]
backend-fs = ["opendal/services-fs"]
backend-s3 = ["opendal/services-s3"]
backend-gcs = ["opendal/services-gcs"]
test-utils = ["dep:rstest", "dep:claims", "manas_repo/test-utils", "manas_http/test-utils", "manas_space/test-utils", "manas_semslot/test-utils", 'opendal/services-memory']
access-prp = ["dep:manas_access_control", "dep:acp"]

[dev-dependencies]
claims = "0.7.1"
rstest = "0.21.0"
tracing-test = "0.2.5"
manas_semslot = { version = "0.1.0", path = "../manas_semslot", features = ["test-utils"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
